<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>

    <!-- Home activity top lable-->

    <string name="home_activity_top_lable">My Nanodegree Apps!</string>
    <!--App Names-->

    <string name="spotify_stremer">SPOTIFY STREAMER</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="my_own_app">Capstone : My Own App</string>

</resources>
